# tiktoken-grpc

./: LICENSE  README.md  main.py  pyproject.toml
.circleci/: config.yml
.github/workflows/: lint-test-publish.yml
deployments/docker/: Dockerfile
deployments/docker/test/: ttsvc_structure_test.yaml
proto/: buf.md  buf.yaml
proto/service/v1/: tiktoken.proto
proto/tiktoken/v1/: tiktoken.proto
tests/: num_tokens.py  test_num_tokens.py
tiktokengrpc/: main.py  service_impl.py
tiktokengrpc/pb2/tiktoken/v1/: tiktoken_pb2.py  tiktoken_pb2.pyi
ttsvc/: __init__.py  service_impl.py
ttsvc/pb2/tiktoken/v1/: tiktoken_pb2_grpc.py
ttsvc/service/v1/: tiktoken_pb2.py  tiktoken_pb2_grpc.py
